--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,12 @@
 @import url("https://fonts.googleapis.com/css?family=PT+Sans:400,700");
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url(../fonts/helveticaneuecyr-bold.otf) format("otf"); }
+  src: url(../fonts/helveticaneuecyr-bold.otf) format("otf");
+  src: url(../fonts/HelveticaNeueCyr-Bold.eot);
+  src: url(../fonts/HelveticaNeueCyr-Bold.eot?#iefix) format("embedded-opentype"), url(../fonts/HelveticaNeueCyr-Bold.woff2) format("woff2"), url(../fonts/HelveticaNeueCyr-Bold.woff) format("woff"), url(../fonts/HelveticaNeueCyr-Bold.svg#HelveticaNeueCyr-Bold) format("svg");
+  font-weight: 700;
+  font-style: normal;
+  font-stretch: normal; }
 
 * {
   font-family: 'Helvetica Neue', 'PT Sans', sans-serif; }
@@ -66,12 +71,14 @@
   font-weight: 700;
   -webkit-transition: all .3s ease-in;
   -o-transition: all .3s ease-in;
-  transition: all .3s ease-in;
-  padding-left: 36px !important; }
+  transition: all .3s ease-in; }
   .nav__link:hover {
     text-decoration: none;
     background-color: none;
     color: grey; }
+
+.navbar-nav > li > a {
+  padding-left: 36px; }
 
 .icon-bar {
   -webkit-transition: all .3s ease-in;
